--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 .DS_Store
 *.log
 .env
+.venv/
+venv/
 
 # Ignore generated file "Enrolled_students.txt" while testing the program
 hashpw.txt
